# garage

./: .gitignore  Procfile  README.md  admin.py  app.py  config.py  extensions.py  forms.py  migrate_admin.py  migrate_db.py  models.py  pyproject.toml  pytest.ini  run_dev.py  storage.py
instance/: inventory.db
src/garage/: 403.html  __init__.py  __main__.py  admin.py  config.py  extensions.py  forms.py  logging_config.py
src/garage/models/: __init__.py  box.py  item.py  user.py
src/garage/routes/: __init__.py  auth.py  boxes.py  items.py  main.py  scanner.py
src/garage/services/: __init__.py  email_service.py  qr_service.py
src/garage/services/storage/: __init__.py  base.py  factory.py  local.py  s3.py
src/garage/utils/: __init__.py  decorators.py
templates/: base.html  base.html.backup  boxdetail.html  boxdetail.html.backup  boxform.html  boxform.html.backup  boxlist.html  boxlist.html.backup  forgotpassword.html.backup  index.html  index.html.backup  itemform.html  itemform.html.backup  login.html  login.html.backup  migrate_urls.py  register.html  register.html.backup  resetpassword.html.backup  scanner.html  scanner.html.backup  search.html  search.html.backup
templates/components/: flashmessages.html
templates/errors/: 404.html  500.html
tests/: conftest.py
tests/functional/: test_admin.py  test_auth.py  test_box_management.py  test_boxes.py  test_items.py  test_main.py  test_scanner.py  test_search.py
tests/unit/: test_admin_model.py  test_forms.py  test_models.py  test_routes.py  test_services.py  test_storage.py
