[project]
name = "garage-inventory"
version = "0.1.0"
description = "Garage inventory management with QR codes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-admin>=2.0.2",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
]

[project.optional-dependencies]
production = [
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.9",
    "cloudinary>=1.36.0",
]
